Add a second example about Iota

--- a/compiler/v7/Makefile
+++ b/compiler/v7/Makefile
@@ -12,9 +12,11 @@ CC=gcc
 
 .w.c:
 	${CTANGLE} $*
-
-runtime: runtime.o
-	${CC} ${CFLAGS} -fPIC -shared -o libhpapl.so runtime.o
 	
-examples: runtime examples.o
+runtime: libhpapl.so
+
+examples: libhpapl.so examples.o
 	${CC} ${CFLAGS} -L. -o examples examples.o -lhpapl
+
+libhpapl.so: runtime.o
+	${CC} ${CFLAGS} -fPIC -shared -o libhpapl.so runtime.o
