Fix qthread related compilation issues Qthreads incorrectly assumes that it can always use the inline keyword for function inlining, but this does not work when we compile our files using the -pedantic -ansi options. This means that we must instead work around this problem by defining inline to be a macro that expands into __inline__ which is the gcc directive that is defined even when we are in the strictest ISO C90 mode that we can be.

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,9 +14,6 @@ EX=4
 .w.c:
 	${CTANGLE} $*
 	
-.c.o:
-	${CC} ${CFLAGS} -c -o $* $< -lqthread
-	
 all: runtime.pdf examples.pdf libhpapl.so examples
 
 run: examples
@@ -29,7 +26,7 @@ examples: libhpapl.so examples.o
 	${CC} ${CFLAGS} -L. -o examples examples.o -lhpapl
 
 libhpapl.so: runtime.o
-	${CC} ${CFLAGS} -shared -o libhpapl.so runtime.o
+	${CC} ${CFLAGS} -shared -o libhpapl.so runtime.o -lqthread
 
 clean: 
 	rm -f *.o hpapl.h libhpapl.so runtime.pdf examples.pdf examples
