Make sure the steps compile and that the examples are informative

--- a/src/Makefile
+++ b/src/Makefile
@@ -23,7 +23,7 @@ debug: examples
 	LD_LIBRARY_PATH=. gdb examples
 	
 examples: libhpapl.so examples.o
-	${CC} ${CFLAGS} -L. -o examples examples.o -lhpapl
+	${CC} ${CFLAGS} -L. -o examples examples.o -lhpapl -lqthread
 
 libhpapl.so: runtime.o
 	${CC} ${CFLAGS} -shared -o libhpapl.so runtime.o -lqthread
